my git tutorial

--- a/history.txt
+++ b/history.txt
@@ -1,2 +1,4 @@
 This is David Guerrero and i'm 38 years old, and i'm software developer, and i'm so so proud about everything
 that i made
+
+the most important for me and better that i ever could make is study
